test/invalid/fc36956_MethodOverrideMethodInAbstractClass/ToalhaDeMesa.plume
/**
 * ToalhaDeMesa.plume
 *
 * Test: when a method is qualified with keyword override, 
 * there must be a method with the same signature 
 * in some super class
 *
 * @author Carlos Mao de Ferro
 * @version $Id: ToalhaDeMesa.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class ToalhaDeMesa extends Toalha is

	method override temNodoas : (estaSuja : Boolean) -> Boolean is
		if estaSuja
		then true
		else false